fix illustration image gap

--- a/styles.css
+++ b/styles.css
@@ -236,14 +236,14 @@ header {
 
 .icon {
 	position: absolute;
-	opacity: 0.8;
+	opacity: 0.3;
 }
 
 .speed-icon {
 	top: 25%;
 	left: 18%;
 	width: 150px;
-	opacity: 1;
+	opacity: 0;
 	width: 15%;
 }
 
@@ -291,6 +291,7 @@ header {
 .main-section h1 {
 	font-size: 4em;
 	margin-bottom: 8px;
+	font-weight: 600;
 }
 
 .main-section h1 span {
@@ -359,8 +360,12 @@ header {
 }
 
 .image-section img {
-	width: 500px;
-	margin-top: 10px;
+	/* width: 500px; */
+	object-fit: cover;
+	z-index: 1000;
+	top: 8px;
+	position: relative;
+	object-position: center;
 }
 
 @media (max-width: 768px) {
